[gd_scene load_steps=5 format=3 uid="uid://tjwdqk8bgbva"]

[ext_resource type="Script" path="res://scenes/load_menu.gd" id="1_0vc6s"]
[ext_resource type="Texture2D" uid="uid://b2j58pjo07k4s" path="res://assets/LoadMenu.png" id="1_ir6h1"]
[ext_resource type="Texture2D" uid="uid://bsxayxfb5l4qh" path="res://assets/buttons/CloseButton.png" id="3_losl5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sfhlq"]
texture = ExtResource("1_ir6h1")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[node name="LoadMenu" type="Control"]
custom_minimum_size = Vector2(644, 500)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0vc6s")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 400)
layout_mode = 0
offset_right = 644.0
offset_bottom = 400.0
theme_override_styles/panel = SubResource("StyleBoxTexture_sfhlq")

[node name="CloseButton" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -35.0
offset_top = 11.0
offset_right = 15.0
offset_bottom = 61.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 8
texture_normal = ExtResource("3_losl5")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -314.0
offset_top = 35.0
offset_right = 314.0
offset_bottom = 384.0
grow_horizontal = 2
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 10

[node name="SavesList" type="VBoxContainer" parent="Panel/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="NoSavesLabel" type="Label" parent="Panel/ScrollContainer/MarginContainer/SavesList"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "No save data found."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/CloseButton" to="." method="on_close"]
